--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
 [submodule "plRdf"]
 	path = plRdf
 	url = https://github.com/wouterbeek/plRdf.git
-[submodule "plRdf-Dev"]
-	path = plRdf-Dev
-	url = https://github.com/wouterbeek/plRdf-Dev.git
 [submodule "plDev"]
 	path = plDev
 	url = https://github.com/wouterbeek/plDev.git
 [submodule "plServer"]
 	path = plServer
 	url = https://github.com/wouterbeek/plServer.git
+[submodule "plTabular"]
+	path = plTabular
+	url = https://github.com/wouterbeek/plTabular.git
