* [DEP] First attempt at getting up-to-date with other projects, mainly plSparql and lodCache.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "plGraphViz"]
 	path = plGraphViz
 	url = https://github.com/wouterbeek/plGraphViz.git
+[submodule "lodCache"]
+	path = lodCache
+	url = https://github.com/wouterbeek/lodCache.git
+[submodule "plSparql"]
+	path = plSparql
+	url = https://github.com/wouterbeek/plSparql.git
