* [SC] Sync to recent updates in submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "plGraph"]
 	path = plGraph
 	url = https://github.com/wouterbeek/plGraph.git
+[submodule "plDcg"]
+	path = plDcg
+	url = https://github.com/wouterbeek/plDcg.git
+[submodule "plXsd"]
+	path = plXsd
+	url = https://github.com/wouterbeek/plXsd.git
